# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Synthesis tool package.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//visibility:public"],
)

exports_files(["synth.tcl"])

exports_files(["abc.script"])

pkg_tar(
    name = "yosys",
    srcs = ["@at_clifford_yosys//:yosys"],
    include_runfiles = True,
    strip_prefix = "./",
)

proto_library(
    name = "power_performance_area_proto",
    srcs = ["power_performance_area.proto"],
)

py_proto_library(
    name = "power_performance_area_py_proto",
    deps = [":power_performance_area_proto"],
)

cc_proto_library(
    name = "power_performance_area_cc_proto",
    deps = [":power_performance_area_proto"],
)
