# Copyright 2023 bazel_rules_hdl Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":defs.bzl", "verilator_toolchain")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//visibility:private"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

verilator_toolchain(
    name = "verilator_toolchain_impl",
    verilator = "@verilator//:verilator_executable",
    deps = [
        "@net_zlib//:zlib",
        "@verilator//:libverilator",
        "@verilator//:svdpi",
    ],
)

toolchain(
    name = "verilator_toolchain",
    toolchain = ":verilator_toolchain_impl",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)
