# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""fmt is an open-source formatting library for C++. It can be used as a safe alternative to printf or as a fast alternative to IOStreams."""

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "fmtlib",
    srcs = [
        "include/fmt/format-inl.h",
        "src/format.cc",
        "src/os.cc",
    ],
    hdrs = glob(
      include = [
        "include/fmt/*.h",
      ],
      exclude = [
        "include/fmt/format-inl.h",
      ]
    ),
    # Turn off user-defined literals - they are not allowed by the Google style guide
    defines = ["FMT_USE_USER_DEFINED_LITERALS=0"],
    includes = [
      "include",
      "src"
    ],
)

cc_library(
    name = "fmtlib_with_exceptions",
    srcs = [
        "include/fmt/format-inl.h",
        "src/format.cc",
        "src/os.cc",
    ],
    hdrs = glob(
      include = [
        "include/fmt/*.h",
      ],
      exclude = [
        "include/fmt/format-inl.h",
      ]
    ),
    copts = [
        "-fexceptions",
    ],
    # Turn off user-defined literals - they are not allowed by the Google style guide
    defines = ["FMT_USE_USER_DEFINED_LITERALS=0"],
    features = ["-use_header_modules"],  # Needed due to -fexceptions
    includes = [
      "include",
      "src"
    ],
)
