# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""SPDlog build file."""

cc_library(
    name = "spdlog",
    hdrs = glob([
        "include/spdlog/**/*.h",
    ]),
    defines = [
        "SPDLOG_FMT_EXTERNAL",
        "SPDLOG_NO_EXCEPTIONS",
    ],
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/container:node_hash_map",
        "@com_github_fmtlib_fmt//:fmtlib",
    ],
)

cc_library(
    name = "spdlog_with_exceptions",
    hdrs = glob([
        "include/spdlog/*.h",
        "include/spdlog/*/*.h",
    ]),
    defines = [
        "SPDLOG_FMT_EXTERNAL",
    ],
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/container:node_hash_map",
        "@com_github_fmtlib_fmt//:fmtlib_with_exceptions",
    ],
)

cc_test(
    name = "test_fmt_helper",
    srcs = [
        "tests/test_fmt_helper.cpp",
        "tests/includes.h",
        "tests/catch.hpp",
        "tests/utils.h",
        "tests/utils.cpp",
        "tests/main.cpp",
    ],
    deps = [
        ":spdlog",
    ]
)
