
cc_library(
    name = "libbacktrace",
    srcs = [
        "atomic.c",
        "backtrace.c",
        "dwarf.c",
        "fileline.c",
        "filenames.h",
        "internal.h",
        "mmap.c",
        "mmapio.c",
        "posix.c",
        "print.c",
        "simple.c",
        "sort.c",
        "state.c",
        "backtrace-supported.h",
        "config.h",
    ],
    hdrs = [
        "backtrace.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    includes = [
        ".",
    ]
)

genrule(
  name = "config",
  srcs = ["@rules_hdl//dependency_support/com_github_libbacktrace:config.h"],
  outs = ["config.h"],
  cmd = "cat $(location @rules_hdl//dependency_support/com_github_libbacktrace:config.h) > $@",
)

genrule(
  name = "backtrace-supported",
  srcs = ["@rules_hdl//dependency_support/com_github_libbacktrace:backtrace-supported.h"],
  outs = ["backtrace-supported.h"],
  cmd = "cat $(location @rules_hdl//dependency_support/com_github_libbacktrace:backtrace-supported.h) > $@",
)