# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
# Library of adders generated with the vlsiffra tooling (https://github.com/antonblanchard/vlsiffra).

load("@rules_license//rules:license.bzl", "license")

license(
    name = "license",
    package_name = "vlsiffra_hdl_library",
)

licenses(["notice"])

exports_files(["LICENSE"])

package(
    default_applicable_licenses = ["@com_github_mithro_vlsiffra_hdl_library//:license"],
    default_visibility = ["//visibility:public"],
)
