# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["restricted"])

DEFINES = [
    "NETGEN_VERSION=\"\\\"1.5\\\"\"",
    "NETGEN_REVISION=\"\\\"155\\\"\"",
    "CAD_DIR=\"BAZEL_sUNIMPLEMENTED\" ",
    "DBUG_OFF=1",
    "linux=1",
    "SYSV=1",
    "ISC=1",
    "SHDLIB_EXT=\"\\\"\"\\\"",
    "NDEBUG",
    "NETGEN_DATE=\"\\\"REDACTED\"\\\"",
]


COPTS = [
    "-std=gnu89",
    "-w",
]

cc_library(
    name = "base",
    srcs = glob([
        "base/*.c",
    ], exclude = [
        "base/test.c",
        "base/xnetgen.c",
    ]),
    hdrs = glob(
        ["base/*.h"],
    ),
    defines = DEFINES,
    copts = COPTS,
    includes = ["base"],
)

BINARIES = {
    "netgen": "netgen/netgen_main.c",
    "netcomp": "netgen/netcomp.c",
    "ntk2adl": "netgen/ntk2adl.c",
    "ntk2xnf": "netgen/ntk2xnf.c",
}

[cc_binary(
    name = name,
    srcs = [BINARIES[name]],
    defines = DEFINES,
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":base",
    ],
) for name in BINARIES]
